[gd_scene load_steps=2 format=3 uid="uid://dyvaunj3fkxqn"]

[ext_resource type="Script" uid="uid://ch5pyv34lj0mq" path="res://leos/scripts/deathMenu.gd" id="1_okyhj"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_okyhj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MATCH END"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart
"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="MuteButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="VolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
